--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="map"></div>
 
-  <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/Turf.js/4.7.3/turf.min.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.1.0/leaflet.js">
   </script>
 
