Started working on bearing marker

--- a/app/index.html
+++ b/app/index.html
@@ -2,94 +2,17 @@
 <html>
 
 <head>
-  <title>Full Screen Leaflet Map</title>
+  <title>Peil-O-Mat</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.1.0/leaflet.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.css" />
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 
 <body>
   <div id="map"></div>
-
   <script src='https://cdnjs.cloudflare.com/ajax/libs/Turf.js/4.7.3/turf.min.js'></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.1.0/leaflet.js">
-  </script>
-
-  <script>
-    var measure = {
-      markers: {
-        start: null,
-        lookAt: null,
-        target: null
-      },
-
-      updateTarget: function() {
-        var bearing = turf.bearing(this.leafletToTurf(this.markers.start.getLatLng()), this.leafletToTurf(this.markers.lookAt.getLatLng()));
-        var destination = turf.destination(this.leafletToTurf(this.markers.start.getLatLng()), 50, bearing, "kilometers");
-        this.markers.target.setLatLng([destination.geometry.coordinates[1], destination.geometry.coordinates[0]]);
-      },
-
-      getLookAtList: function() {
-        return [this.markers.start.getLatLng(), this.markers.lookAt.getLatLng()];
-      },
-
-      getTargetList: function() {
-        return [this.markers.lookAt.getLatLng(), this.markers.target.getLatLng()];
-      },
-
-      leafletToTurf: function(latLng) {
-        return [latLng.lng, latLng.lat];
-      }
-    };
-
-    function update(sender) {
-      return function(e) {
-        measure.updateTarget();
-        firstpolyline.setLatLngs(measure.getLookAtList());
-        secondpolyline.setLatLngs(measure.getTargetList());
-        console.log(measure.markers);
-      }
-    }
-
-    var map = L.map('map').setView([51, 6], 10);
-    mapLink = '<a href="http://openstreetmap.org">OpenStreetMap</a>';
-    L.tileLayer(
-      'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; ' + mapLink + ' Contributors',
-        maxZoom: 18
-      }).addTo(map);
-
-    measure.markers.start = L.marker([51.0053536788148, 5.9861111640930185], {
-      "draggable": true,
-      "title": "Start"
-    }).on("drag", update("start")).addTo(map);
-
-    measure.markers.lookAt = L.marker([51.0032506646835, 5.98658323287964], {
-      "draggable": true,
-      "title": "LookAt"
-    }).on("drag", update("lookAt")).addTo(map);
-
-    measure.markers.target = L.marker([52, 6], {
-      "title": "Target"
-    }).addTo(map);
-    measure.updateTarget();
-
-    var firstpolyline = new L.Polyline(measure.getLookAtList(), {
-      color: 'red',
-      weight: 3,
-      opacity: 0.5,
-      smoothFactor: 1
-    });
-    firstpolyline.addTo(map);
-
-    var secondpolyline = new L.Polyline(measure.getTargetList(), {
-      color: 'blue',
-      weight: 3,
-      opacity: 0.5,
-      smoothFactor: 1
-    });
-    secondpolyline.addTo(map);
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
