--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <div id="map"></div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/Turf.js/4.7.3/turf.min.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.js"></script>
+  <script src='./leaflet.circle-sector.js'></script>  
   <script src="./app.js"></script>
 </body>
 
