--- a/app/index.html
+++ b/app/index.html
@@ -4,16 +4,22 @@
 <head>
   <title>Peil-O-Mat</title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.css" />
   <link rel="stylesheet" href="styles/style.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css" />
 </head>
 
 <body>
   <div id="map"></div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/Turf.js/4.7.3/turf.min.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.js" charset="utf-8"></script>
   <script src='./leaflet.circle-sector.js'></script>  
   <script src="./app.js"></script>
 </body>
 
 </html>
+
+ 
